更新课程笔记和自学笔记部分

--- a/docs/网站上传信息步骤.md
+++ b/docs/网站上传信息步骤.md
@@ -269,3 +269,21 @@ print("Hello")
 另一个脚注[^note]。
 
 [^note]: 脚注可以有自定义名称。
+
+
+
+# 测试公式渲染
+## 行内公式（[] 格式）
+样本方差公式：[ S^2 = \frac{1}{n-1} \sum_{i=1}^{n} (X_i - \overline{X})^2 ]
+
+## 块级公式（[[]] 格式）
+[[
+\int_{-\infty}^{+\infty} f(x) dx = 1
+]]
+
+## 兼容原有 $/$$ 格式（仍可用）
+行内：$E=mc^2$
+块级：
+$$
+\sum_{k=1}^n k = \frac{n(n+1)}{2}
+$$
